grpc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  selector:
    app: grpc-service-app
  ports:
    - name: grpc
      protocol: TCP
      port: 8080
  type: ClusterIP
