istio-config.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 8080
      name: grpc
      protocol: GRPC
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - grpc-gateway
#  http:
#  - match:
#    - port: 80
#    route:
#    - destination:
#        host: grpc-service.default.svc.cluster.local
#        # subset: v1
#        port:
#          number: 80
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grpc-service.default.svc.cluster.local
        # subset: v1
        port:
          number: 8080
